# bud

./: .gitignore  LICENSE  README.md  README.rst  Vagrantfile  cookiecutter.json  manage.py
MowitiGIS/: .gitignore  (+11 more)
{{cookiecutter.project_slug}}/: .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  Vagrantfile  configuration.nix  default.nix  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  local.yml  manage.py  postgres.nix  project.nix  pyproject.toml  redis.nix  requirements.txt  runserver.sh  service.nix  setup.py  shell.nix
{{cookiecutter.project_slug}}/MowitiGIS/: settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/MowitiGIS/DDMap/: apps.py  load_channels.py  models.py  urls.py
{{cookiecutter.project_slug}}/MowitiGIS/static/: main-script.js
{{cookiecutter.project_slug}}/MowitiGIS/templates/: DDGraph.html  index.html  pois.html
{{cookiecutter.project_slug}}/docker/development/: Dockerfile  start.sh
{{cookiecutter.project_slug}}/docker/local/: Dockerfile  start.sh
{{cookiecutter.project_slug}}/nix/: default.nix  dev-config.nix  hardware-configuration.nix  nixpkgs.nix  package.nix  prod-config.nix  prod-system.nix  release.nix  service.nix  shell.nix
{{cookiecutter.project_slug}}/postgres/: Dockerfile
{{cookiecutter.project_slug}}/requirements/: common.txt  development.txt  production.txt
{{cookiecutter.project_slug}}/scripts/: manage.py  start-local  stop-local  wait_for_db.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: settings.py  urls.py  wsgi.py
(+229 files in other folders)
